--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "range-closest-to-xy": "0.1.0",
     "split-at-range": "0.0.2",
     "component-emitter": "1.1.2",
-    "debug": "1.0.2"
+    "debug": "~1.0.4"
   },
   "repository": {
     "type": "git",
