--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "range-closest-to-xy": "0.1.1",
     "split-at-range": "0.0.2",
     "component-emitter": "1.1.3",
-    "debug": "~1.0.4"
+    "debug": "2"
   },
   "repository": {
     "type": "git",
