--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "component-emitter": "1.2.0",
     "debug": "2"
   },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/Automattic/drag-element.git"
